--- a/sft-facturacion/views/views_account_payment.xml
+++ b/sft-facturacion/views/views_account_payment.xml
@@ -1,149 +1,210 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <odoo>
-  <data>
-
+   <data>
       <record id="account_payment_sat_invoice_view" model="ir.ui.view">
-        <field name="name">account.payment.form</field>
-        <field name="model">account.payment</field>
-        <field name="inherit_id" ref="account.view_account_payment_invoice_form"/>
-        <field name="arch" type="xml">           
-        <xpath expr="//field[@name='communication']" position="after">
-          <field name="formadepagop_id"/>
-          <field name="tipocambiop"/>
-          <field name="no_operacion"/>
-          <field name="uuid"/>
-          <field name="id_banco_seleccionado" invisible="1"/>
-          <field name="nom_banco_ord_ext_id" attrs="{'invisible':[('ocultar', '=', True)]}"/>
-          <field name="ocultar" invisible="1"/>
-          <field name="rfc_emisor_cta_ord" attrs="{'invisible':[('ocultar', '=', True)]}"/>
-          <field name="cta_ordenante" attrs="{'invisible':[('ocultar', '=', True)]}"/>
-          <field name="rfc_emisor_cta_ben" editable="false" attrs="{'invisible':[('ocultar', '=', True)]}"/>
-          <field name="cta_beneficiario" attrs="{'invisible':[('ocultar', '=', True)]}"/>
-          <field name="timbrar_pago" invisible="1"/>
-          <field name="ref" invisible="1"/>
-        </xpath>
-
-      <xpath expr="/form/footer/button" position="after">
-         <button name="Validar_y_Timbrar_Pago" string="Validar y Timbrar" type="object" attrs="{'invisible':[('timbrar_pago', '=', False)]}" class=""/>
-       </xpath>
-
-       <xpath expr="/form/footer/button[@name='post']" position="replace">
-         <button name="Validar_Pago" string="Validar" type="object" attrs="{'invisible':[('timbrar_pago', '=', True)]}"/>
-       </xpath>
-
-
-    </field>
-
-    </record>
-
-
-      <record id="account_journal_sat_form_view" model="ir.ui.view">
-        <field name="name">account.journal.form</field>
-        <field name="model">account.journal</field>
-        <field name="inherit_id" ref="account.view_account_journal_form"/>
-        <field name="arch" type="xml">
-        <xpath expr="//field[@name='bank_id']" position="after">
-          <field name="rfc_institucion_bancaria"/>
-        </xpath>
-
-
-      </field>
-    </record>
-
-
-    <record id="account_move_sat_form_view" model="ir.ui.view">
-        <field name="name">account.move.form</field>
-        <field name="model">account.move</field>
-        <field name="inherit_id" ref="account.view_move_form"/>
-        <field name="arch" type="xml">           
-        <xpath expr="//field[@name='ref']" position="after">
-          <field name="move_rfc_emisor_cta_ben" attrs="{'readonly':[('move_timbrada','=','Timbrada')]}"/>
-            <field name="move_cta_beneficiario" attrs="{'readonly':[('move_timbrada','=','Timbrada')]}"/>
-               <separator colspan="2"/>
-               <separator colspan="2"/>
+         <field name="name">account.payment.form</field>
+         <field name="model">account.payment</field>
+         <field name="inherit_id" ref="account.view_account_payment_invoice_form" />
+         <field name="arch" type="xml">
+            <xpath expr="//field[@name='communication']" position="after">
+               <field name="formadepagop_id" attrs="{'invisible':[('timbrar_pago', '=', False)]}" />
+               <field name="tipocambiop" attrs="{'invisible':[('timbrar_pago', '=', False)]}" />
+               <field name="no_operacion" attrs="{'invisible':[('timbrar_pago', '=', False)]}" />
+               <field name="uuid" attrs="{'invisible':[('timbrar_pago', '=', False)]}" />
+               <field name="ocultar" invisible="1" />
+               <field name="timbrar_pago" invisible="1" />
+               <field name="ref" invisible="1" />
+            </xpath>
+            <xpath expr="/form/sheet[1]/group[1]/group[2]" position="after">
+               <group attrs="{'invisible':[('timbrar_pago', '=', False)]}">
+                  <div colspan="2">
+                     <center>
+                        <span>
+                           <h3 style="display:inline">Mis Datos bancarios</h3>
+                        </span>
+                     </center>
+                  </div>
+                  <!--<label for="nom_banco_ord_ext_id" />
+                  <div>
+                     <field name="nom_banco_ord_ext_id" attrs="{'invisible':[('ocultar', '=', True)]}" />
+                     <field name="id_banco_seleccionado" invisible="1" />
+                  </div>-->
+                  <field name="rfc_emisor_cta_ben" editable="true" attrs="{'invisible':[('ocultar', '=', True)]}" />
+                  <field name="cta_beneficiario" attrs="{'invisible':[('ocultar', '=', True)]}" />
+               </group>
+               <group attrs="{'invisible':[('timbrar_pago', '=', False)]}">
+                  <div colspan="2">
+                     <center>
+                        <span>
+                           <h3 style="display:inline">Datos bancarios de mi cliente</h3>
+                        </span>
+                     </center>
+                  </div>
+                  <field name="nom_banco_ord_ext_id" attrs="{'invisible':[('ocultar', '=', True)]}" />
+                  <field name="rfc_emisor_cta_ord" attrs="{'invisible':[('ocultar', '=', True)]}" />
+                  <field name="cta_ordenante" attrs="{'invisible':[('ocultar', '=', True)]}" />
+                  <field name="timbrar_pago" invisible="1" />
+               </group>
+               <!--<group>
+                    <span> <h3 style="display:inline">Datos bancarios de mi cliente</h3></span>
+                    <field name="id_banco_seleccionado" invisible="1"/>
+                    <field name="rfc_emisor_cta_ben" editable="false" attrs="{'invisible':[('ocultar', '=', True)]}"/>
+                    <field name="cta_beneficiario" attrs="{'invisible':[('ocultar', '=', True)]}"/>
+                </group>-->
+               <!--<tr>
+                <td>
+                    <span> <h3 style="display:inline">Mis Datos bancarios</h3></span>
+                </td>
+                <td>
+                    <span> <h3 style="display:inline">Datos bancarios de mi cliente</h3></span>
+                </td>
+            </tr>
             <tr>
-             <td>
-              <span> <h3 style="display:inline">Informacion del Timbre</h3></span>
-            </td>
-            <td>
-              <span> </span>
-            </td>
-          </tr>
-          <separator colspan="2"/>
-          <separator colspan="2"/>
-            <field name="move_uuid_ref"/>
-            <field name="move_uuid" attrs="{'readonly':[('move_timbrada','=','Timbrada')]}"/>
-            <field name="move_timbrada" attrs="{'readonly':[('move_timbrada','=','Timbrada')]}"/>
-            <field name="move_imp_saldo_ant" attrs="{'readonly':[('move_timbrada','=','Timbrada')]}"/>
-            <field name="move_imp_pagado"  attrs="{'readonly':[('move_timbrada','=','Timbrada')]}"/>
-          <field name="move_imp_saldo_insoluto" attrs="{'readonly':[('move_timbrada','=','Timbrada')]}"/>
-        </xpath>
+                <td>
+                    <separator colspan="2"/>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <field name="nom_banco_ord_ext_id" attrs="{'invisible':[('ocultar', '=', True)]}"/>
+                    <field name="cta_ordenante" attrs="{'invisible':[('ocultar', '=', True)]}"/>
+                    <field name="rfc_emisor_cta_ord" attrs="{'invisible':[('ocultar', '=', True)]}"/>
 
-        <xpath expr="//field[@name='ref']" position="attributes">
-          <atribute name="attrs">{'readonly':[('move_timbrada','=','Timbrada')]}"</atribute>
-        </xpath>
+                </td>
+                <td>
+                    <field name="id_banco_seleccionado" invisible="1"/>
+                    <field name="rfc_emisor_cta_ben" editable="false" attrs="{'invisible':[('ocultar', '=', True)]}"/>
+                    <field name="cta_beneficiario" attrs="{'invisible':[('ocultar', '=', True)]}"/>
 
-        <xpath expr="//field[@name='ref']" position="before">
-          <tr>
-             <td>
-              <span> <h3 style="display:inline">Datos Bancarios De la Cuenta Beneficiario</h3></span>
-            </td>
-            <td>
-              <span> </span>
-            </td>
-          </tr>
-          <separator colspan="2"/>
-          <separator colspan="2"/>
-        </xpath>
+                </td>
+            </tr>-->
+            </xpath>
+            <xpath expr="/form/footer/button" position="after">
+               <button name="Validar_y_Timbrar_Pago" string="Validar y Timbrar" icon="fa-cloud-upload" class="oe_highlight" type="object" attrs="{'invisible':[('timbrar_pago', '=', False)]}" />
+            </xpath>
+            <xpath expr="/form/footer/button[@name='post']" position="replace">
+               <button name="Validar_Pago" string="Validar" type="object" class="oe_highlight" icon="fa-check" />
+            </xpath>
+            <!--<xpath expr="/form/sheet[1]" position="after">
+                <field name="rfc_emisor_cta_ord" attrs="{'invisible':[('ocultar', '=', True)]}"/>
+            </xpath>-->
+         </field>
+      </record>
+      <record id="account_journal_sat_form_view" model="ir.ui.view">
+         <field name="name">account.journal.form</field>
+         <field name="model">account.journal</field>
+         <field name="inherit_id" ref="account.view_account_journal_form" />
+         <field name="arch" type="xml">
+            <xpath expr="//field[@name='bank_id']" position="after">
+               <field name="rfc_institucion_bancaria" />
+            </xpath>
+         </field>
+      </record>
+      <record id="account_move_sat_form_view" model="ir.ui.view">
+         <field name="name">account.move.form</field>
+         <field name="model">account.move</field>
+         <field name="inherit_id" ref="account.view_move_form" />
+         <field name="arch" type="xml">
+            <xpath expr="//field[@name='ref']" position="after" />
+            <xpath expr="//field[@name='ref']" position="attributes">
+               <atribute name="attrs">{'readonly':[('move_timbrada','=','Timbrada')]}"</atribute>
+            </xpath>
 
-        <xpath expr="//field[@name='date']" position="after">
-          <field name="move_no_parcialidad" attrs="{'readonly':[('move_timbrada','=','Timbrada')]}"/>
-          <field name="move_formadepagop_id" attrs="{'readonly':[('move_timbrada','=','Timbrada')]}"/>
-          <field name="move_moneda_p" attrs="{'readonly':[('move_timbrada','=','Timbrada')]}"/>
-          <field name="move_tipocambiop" attrs="{'readonly':[('move_timbrada','=','Timbrada')]}"/>
-          <field name="move_uso_cfdi_id" invisible="1"/>
-          <field name="ref_factura" invisible="1"/>
-        </xpath>
 
-        <xpath expr="//field[@name='journal_id']" position="before">
-          <separator colspan="2"/>
-          <separator colspan="2"/>
-          <tr>
-             <td>
-              <span> <h3 style="display:inline">Datos Bancarios de la Cuenta Ordenante</h3></span>
-            </td>
-            <td>
-              <span> </span>
-            </td>
-          </tr>
-          <separator colspan="2"/>
-          <separator colspan="2"/>
-          <field name="move_no_operacion" attrs="{'readonly':[('move_timbrada','=','Timbrada')]}"/>
-          <field name="move_rfc_emisor_cta_ord" attrs="{'readonly':[('move_timbrada','=','Timbrada')]}"/>
-          <field name="move_nom_banco_ord_ext_id" attrs="{'readonly':[('move_timbrada','=','Timbrada')]}"/>
-          <field name="move_cta_ordenante" attrs="{'readonly':[('move_timbrada','=','Timbrada')]}"/>
-          <separator colspan="2"/>
-          <separator colspan="2"/>
-          <tr>
-             <td>
-              <span> <h3 style="display:inline">Informacion del Pago</h3></span>
-            </td>
-            <td>
-              <span> </span>
-            </td>
-          </tr>
-          <separator colspan="2"/>
-          <separator colspan="2"/>
-        </xpath>
+            <xpath expr="//field[@name='ref']" position="after">
+               <tr >
+                  <td>
+                     <span>
+                        <h3 style="display:inline" attrs="{'invisible':[('move_puede_timbrar','=',False)]}">Informacion del Pago</h3>
+                     </span>
+                  </td>
+                  <td>
+                     <span />
+                  </td>
+               </tr>
+                <field name="move_puede_timbrar"  invisible="1" />
+               <field name="move_no_parcialidad" attrs="{'readonly':[('move_timbrada','=','Timbrada')],'invisible':[('move_puede_timbrar','=',False)]}" />
+                <field name="move_no_operacion" attrs="{'readonly':[('move_timbrada','=','Timbrada')],'invisible':[('move_puede_timbrar','=',False)]}" />
+               <field name="move_formadepagop_id" attrs="{'readonly':[('move_timbrada','=','Timbrada')],'invisible':[('move_puede_timbrar','=',False)]}" />
+               <field name="move_moneda_p" attrs="{'readonly':[('move_timbrada','=','Timbrada')],'invisible':[('move_puede_timbrar','=',False)]}" />
+               <field name="move_tipocambiop" attrs="{'readonly':[('move_timbrada','=','Timbrada')],'invisible':[('move_puede_timbrar','=',False)]}" />
+               <field name="move_imp_saldo_ant" attrs="{'readonly':[('move_timbrada','=','Timbrada')],'invisible':[('move_puede_timbrar','=',False)]}" />
+               <field name="move_imp_pagado" attrs="{'readonly':[('move_timbrada','=','Timbrada')],'invisible':[('move_puede_timbrar','=',False)]}" />
+               <field name="move_imp_saldo_insoluto" attrs="{'readonly':[('move_timbrada','=','Timbrada')],'invisible':[('move_puede_timbrar','=',False)]}" />
+               <field name="move_uuid" attrs="{'readonly':True,'invisible':[('move_puede_timbrar','=',False)]}" />
+               <field name="move_timbrada" attrs="{'readonly':True,'invisible':[('move_puede_timbrar','=',False)]}" />
+               <field name="move_uso_cfdi_id" invisible="1" />
+               <field name="ref_factura" invisible="1" />
+               <separator colspan="2" />
+               <separator colspan="2" />
+            </xpath>
+            <xpath expr="//field[@name='date']" position="after">
+               <tr>
+                  <td>
+                     <span>
+                        <h3 style="display:inline" attrs="{'invisible':[('move_puede_timbrar','=',False)]}">Informacion del Timbre</h3>
+                     </span>
+                  </td>
+                  <td>
+                     <span />
+                  </td>
+               </tr>
+               <separator colspan="2" />
+               <separator colspan="2" />
+               <field name="move_uuid_ref" attrs="{'readonly':True,'invisible':[('move_puede_timbrar','=',False)]}" />
+                <tr>
+                  <td colspan="2">
+                     <span>
+                        <h3 style="display:inline" attrs="{'invisible':[('move_puede_timbrar','=',False)]}">Mis datos bancarios</h3>
+                     </span>
+                  </td>
+               </tr>
+                <separator colspan="2" />
+               <separator colspan="2" />
 
-             <xpath expr="/form/header/button" position="after">
-         <button name="timbrar_pago" attrs="{'invisible': [('move_timbrada','!=','Sin Timbrar')]}" type="object" string="Timbrar Pago" class="oe_highlight"/>
-         <button name="descargar_factura_pdf" attrs="{'invisible': [('move_timbrada','=','Sin Timbrar')]}" type="object" string="Descargar Factura PDF" icon="fa-file-pdf-o"/>
-         <button name="descargar_factura_xml" attrs="{'invisible': [('move_timbrada','=','Sin Timbrar')]}" type="object" string="Descargar Archivo XML" icon="fa-file-text"/>
-         <button name="cancelar_pagos_timbrada" string="Cancelar Timbre del Pago" icon ="fa-times" type="object" attrs="{'invisible': [('move_timbrada','=','Sin Timbrar')]}"/>
-      </xpath>
+                <field name="move_rfc_emisor_cta_ben" attrs="{'readonly':[('move_timbrada','=','Timbrada')],'invisible':[('move_puede_timbrar','=',False)]}" />
+                <field name="move_cta_beneficiario" attrs="{'readonly':[('move_timbrada','=','Timbrada')],'invisible':[('move_puede_timbrar','=',False)]}" />
 
-      </field>
-    </record>
+               <tr>
+                  <td colspan="2">
+                     <span>
+                        <h3 style="display:inline"  attrs="{'invisible':[('move_puede_timbrar','=',False)]}">Datos bancarios de mi cliente</h3>
+                     </span>
+                  </td>
+               </tr>
+               <separator colspan="2" />
+               <separator colspan="2" />
+                <field name="move_nom_banco_ord_ext_id" attrs="{'readonly':[('move_timbrada','=','Timbrada')],'invisible':[('move_puede_timbrar','=',False)]}" />
+               <field name="move_rfc_emisor_cta_ord" attrs="{'readonly':[('move_timbrada','=','Timbrada')],'invisible':[('move_puede_timbrar','=',False)]}" />
 
-  </data>
+               <field name="move_cta_ordenante" attrs="{'readonly':[('move_timbrada','=','Timbrada')],'invisible':[('move_puede_timbrar','=',False)]}" />
+               <separator colspan="2" />
+               <separator colspan="2" />
+
+
+
+            </xpath>
+            <!--<xpath expr="//field[@name='journal_id']" position="after">
+
+        </xpath>-->
+            <xpath expr="/form/header/button" position="after">
+               <button name="timbrar_pago" attrs="{'invisible': ['|',('move_timbrada','!=','Sin Timbrar'),('move_puede_timbrar','=',False) ]}" type="object" string="Timbrar Pago" class="oe_highlight" />
+               <button name="descargar_factura_pdf" attrs="{'invisible': [('move_timbrada','=','Sin Timbrar')]}" type="object" string="Descargar Factura PDF" icon="fa-file-pdf-o" />
+               <button name="descargar_factura_xml" attrs="{'invisible': [('move_timbrada','=','Sin Timbrar')]}" type="object" string="Descargar Archivo XML" icon="fa-file-text" />
+               <button name="cancelar_pagos_timbrada" string="Cancelar Timbre del Pago" icon="fa-times" type="object" attrs="{'invisible': [('move_timbrada','=','Sin Timbrar')]}" />
+            </xpath>
+         </field>
+      </record>
+      <record id="account_payment_sft_pago_view" model="ir.ui.view">
+         <field name="name">account.payment.form</field>
+         <field name="model">account.payment</field>
+         <field name="inherit_id" ref="account.view_account_payment_form" />
+         <field name="arch" type="xml">
+            <xpath expr="//field[@name='journal_id']" position="after">
+               <field name="no_operacion" />
+               <field name="rfc_emisor_cta_ord" />
+            </xpath>
+         </field>
+      </record>
+   </data>
 </odoo>
