--- a/sft-facturacion/views/views_account_payment.xml
+++ b/sft-facturacion/views/views_account_payment.xml
@@ -8,6 +8,7 @@
          <field name="arch" type="xml">
             <xpath expr="//field[@name='communication']" position="after">
                <field name="formadepagop_id" attrs="{'invisible':[('timbrar_pago', '=', False)]}" />
+               <field name="moneda_p" attrs="{'invisible':[('timbrar_pago', '=', False)]}" />
                <field name="tipocambiop" attrs="{'invisible':[('timbrar_pago', '=', False)]}" />
                <field name="no_operacion" attrs="{'invisible':[('timbrar_pago', '=', False)]}" />
                <field name="uuid" attrs="{'invisible':[('timbrar_pago', '=', False)]}" />
@@ -15,6 +16,11 @@
                <field name="timbrar_pago" invisible="1" />
                <field name="ref" invisible="1" />
             </xpath>
+            <xpath expr="//div[@name='amount_div']" position="after">
+               <field name="sustituye_pago"  />
+               <field name="pago_sustituye" domain="['&amp;',('ref', '=', ref),('state', '=', 'canceled')]" attrs="{'invisible':[('sustituye_pago', '=', False)]}" options="{'no_create': True, 'no_create_edit':True}"  />
+            </xpath>
+
             <xpath expr="/form/sheet[1]/group[1]/group[2]" position="after">
                <group attrs="{'invisible':[('timbrar_pago', '=', False)]}">
                   <div colspan="2">
@@ -24,11 +30,7 @@
                         </span>
                      </center>
                   </div>
-                  <!--<label for="nom_banco_ord_ext_id" />
-                  <div>
-                     <field name="nom_banco_ord_ext_id" attrs="{'invisible':[('ocultar', '=', True)]}" />
-                     <field name="id_banco_seleccionado" invisible="1" />
-                  </div>-->
+
                   <field name="rfc_emisor_cta_ben" editable="true" attrs="{'invisible':[('ocultar', '=', True)]}" />
                   <field name="cta_beneficiario" attrs="{'invisible':[('ocultar', '=', True)]}" />
                </group>
@@ -45,39 +47,6 @@
                   <field name="cta_ordenante" attrs="{'invisible':[('ocultar', '=', True)]}" />
                   <field name="timbrar_pago" invisible="1" />
                </group>
-               <!--<group>
-                    <span> <h3 style="display:inline">Datos bancarios de mi cliente</h3></span>
-                    <field name="id_banco_seleccionado" invisible="1"/>
-                    <field name="rfc_emisor_cta_ben" editable="false" attrs="{'invisible':[('ocultar', '=', True)]}"/>
-                    <field name="cta_beneficiario" attrs="{'invisible':[('ocultar', '=', True)]}"/>
-                </group>-->
-               <!--<tr>
-                <td>
-                    <span> <h3 style="display:inline">Mis Datos bancarios</h3></span>
-                </td>
-                <td>
-                    <span> <h3 style="display:inline">Datos bancarios de mi cliente</h3></span>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <separator colspan="2"/>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <field name="nom_banco_ord_ext_id" attrs="{'invisible':[('ocultar', '=', True)]}"/>
-                    <field name="cta_ordenante" attrs="{'invisible':[('ocultar', '=', True)]}"/>
-                    <field name="rfc_emisor_cta_ord" attrs="{'invisible':[('ocultar', '=', True)]}"/>
-
-                </td>
-                <td>
-                    <field name="id_banco_seleccionado" invisible="1"/>
-                    <field name="rfc_emisor_cta_ben" editable="false" attrs="{'invisible':[('ocultar', '=', True)]}"/>
-                    <field name="cta_beneficiario" attrs="{'invisible':[('ocultar', '=', True)]}"/>
-
-                </td>
-            </tr>-->
             </xpath>
             <xpath expr="/form/footer/button" position="after">
                <button name="Validar_y_Timbrar_Pago" string="Validar y Timbrar" icon="fa-cloud-upload" class="oe_highlight" type="object" attrs="{'invisible':[('timbrar_pago', '=', False)]}" />
@@ -85,9 +54,7 @@
             <xpath expr="/form/footer/button[@name='post']" position="replace">
                <button name="Validar_Pago" string="Validar" type="object" class="oe_highlight" icon="fa-check" />
             </xpath>
-            <!--<xpath expr="/form/sheet[1]" position="after">
-                <field name="rfc_emisor_cta_ord" attrs="{'invisible':[('ocultar', '=', True)]}"/>
-            </xpath>-->
+
          </field>
       </record>
       <record id="account_journal_sat_form_view" model="ir.ui.view">
@@ -100,7 +67,9 @@
             </xpath>
          </field>
       </record>
-      <record id="account_move_sat_form_view" model="ir.ui.view">
+
+
+      <!--<record id="account_move_sat_form_view" model="ir.ui.view">
          <field name="name">account.move.form</field>
          <field name="model">account.move</field>
          <field name="inherit_id" ref="account.view_move_form" />
@@ -123,20 +92,35 @@
                   </td>
                </tr>
                 <field name="move_puede_timbrar"  invisible="1" />
-               <field name="move_no_parcialidad" attrs="{'readonly':[('move_timbrada','=','Timbrada')],'invisible':[('move_puede_timbrar','=',False)]}" />
-                <field name="move_no_operacion" attrs="{'readonly':[('move_timbrada','=','Timbrada')],'invisible':[('move_puede_timbrar','=',False)]}" />
-               <field name="move_formadepagop_id" attrs="{'readonly':[('move_timbrada','=','Timbrada')],'invisible':[('move_puede_timbrar','=',False)]}" />
-               <field name="move_moneda_p" attrs="{'readonly':[('move_timbrada','=','Timbrada')],'invisible':[('move_puede_timbrar','=',False)]}" />
-               <field name="move_tipocambiop" attrs="{'readonly':[('move_timbrada','=','Timbrada')],'invisible':[('move_puede_timbrar','=',False)]}" />
-               <field name="move_imp_saldo_ant" attrs="{'readonly':[('move_timbrada','=','Timbrada')],'invisible':[('move_puede_timbrar','=',False)]}" />
-               <field name="move_imp_pagado" attrs="{'readonly':[('move_timbrada','=','Timbrada')],'invisible':[('move_puede_timbrar','=',False)]}" />
-               <field name="move_imp_saldo_insoluto" attrs="{'readonly':[('move_timbrada','=','Timbrada')],'invisible':[('move_puede_timbrar','=',False)]}" />
+               <field name="move_puede_editar"  invisible="0" />
+
+               <field name="move_no_parcialidad" attrs="{'readonly':[('move_puede_editar','=',False)], 'invisible':[('move_puede_timbrar','=',False)]}" />
+                <field name="move_no_operacion" attrs="{'readonly':[('move_puede_editar','=',False)],'invisible':[('move_puede_timbrar','=',False)]}" />
+               <field name="move_formadepagop_id" attrs="{'readonly':[('move_puede_editar','=',False)],'invisible':[('move_puede_timbrar','=',False)]}" />
+               <field name="move_moneda_p" attrs="{'readonly':[('move_puede_editar','=',False)],'invisible':[('move_puede_timbrar','=',False)]}" />
+               <field name="move_tipocambiop" attrs="{'readonly':[('move_puede_editar','=',False)],'invisible':[('move_puede_timbrar','=',False)]}" />
+               <field name="move_imp_saldo_ant" attrs="{'readonly':[('move_puede_editar','=',False)],'invisible':[('move_puede_timbrar','=',False)]}" />
+               <field name="move_imp_pagado" attrs="{'readonly':[('move_puede_editar','=',False)],'invisible':[('move_puede_timbrar','=',False)]}" />
+               <field name="move_imp_saldo_insoluto" attrs="{'readonly':[('move_puede_editar','=',False)],'invisible':[('move_puede_timbrar','=',False)]}" />
                <field name="move_uuid" attrs="{'readonly':True,'invisible':[('move_puede_timbrar','=',False)]}" />
                <field name="move_timbrada" attrs="{'readonly':True,'invisible':[('move_puede_timbrar','=',False)]}" />
+               <field name="sustituye_pago" attrs="{'readonly':[('move_puede_editar','=',False)],'invisible':[('move_puede_timbrar','=',False)]}"  />
+               <field name="pago_sustituye"  domain="['&amp;',('ref_factura', '=', ref),('state', '=', 'canceled')]"
+                      attrs="{'invisible':[('sustituye_pago', '=', False)], 'readonly':[('move_puede_editar','=',False)]}"
+                      options="{'no_create': True, 'no_create_edit':True}"  />
                <field name="move_uso_cfdi_id" invisible="1" />
                <field name="ref_factura" invisible="1" />
                <separator colspan="2" />
                <separator colspan="2" />
+            </xpath>
+            <xpath expr="//field[@name='journal_id']" position="attributes">
+               <attribute name="attrs">{'readonly':[('move_puede_editar','=',False)],'required':True}</attribute>
+            </xpath>
+            <xpath expr="//field[@name='date']" position="attributes">
+               <attribute name="attrs">{'readonly':[('move_puede_editar','=',False)],'required':True}</attribute>
+            </xpath>
+            <xpath expr="//field[@name='ref']" position="attributes">
+               <attribute name="attrs">{'readonly':[('move_puede_editar','=',False)]}</attribute>
             </xpath>
             <xpath expr="//field[@name='date']" position="after">
                <tr>
@@ -162,8 +146,8 @@
                 <separator colspan="2" />
                <separator colspan="2" />
 
-                <field name="move_rfc_emisor_cta_ben" attrs="{'readonly':[('move_timbrada','=','Timbrada')],'invisible':[('move_puede_timbrar','=',False)]}" />
-                <field name="move_cta_beneficiario" attrs="{'readonly':[('move_timbrada','=','Timbrada')],'invisible':[('move_puede_timbrar','=',False)]}" />
+                <field name="move_rfc_emisor_cta_ben" attrs="{'readonly':[('move_puede_editar','=',False)],'invisible':[('move_puede_timbrar','=',False)]}" />
+                <field name="move_cta_beneficiario" attrs="{'readonly':[('move_puede_editar','=',False)],'invisible':[('move_puede_timbrar','=',False)]}" />
 
                <tr>
                   <td colspan="2">
@@ -174,37 +158,112 @@
                </tr>
                <separator colspan="2" />
                <separator colspan="2" />
-                <field name="move_nom_banco_ord_ext_id" attrs="{'readonly':[('move_timbrada','=','Timbrada')],'invisible':[('move_puede_timbrar','=',False)]}" />
-               <field name="move_rfc_emisor_cta_ord" attrs="{'readonly':[('move_timbrada','=','Timbrada')],'invisible':[('move_puede_timbrar','=',False)]}" />
+                <field name="move_nom_banco_ord_ext_id" attrs="{'readonly':[('move_puede_editar','=',False)],'invisible':[('move_puede_timbrar','=',False)]}" />
+               <field name="move_rfc_emisor_cta_ord" attrs="{'readonly':[('move_puede_editar','=',False)],'invisible':[('move_puede_timbrar','=',False)]}" />
 
-               <field name="move_cta_ordenante" attrs="{'readonly':[('move_timbrada','=','Timbrada')],'invisible':[('move_puede_timbrar','=',False)]}" />
+               <field name="move_cta_ordenante" attrs="{'readonly':[('move_puede_editar','=',False)],'invisible':[('move_puede_timbrar','=',False)]}" />
                <separator colspan="2" />
                <separator colspan="2" />
 
 
 
             </xpath>
-            <!--<xpath expr="//field[@name='journal_id']" position="after">
-
-        </xpath>-->
             <xpath expr="/form/header/button" position="after">
                <button name="timbrar_pago" attrs="{'invisible': ['|',('move_timbrada','!=','Sin Timbrar'),('move_puede_timbrar','=',False) ]}" type="object" string="Timbrar Pago" class="oe_highlight" />
                <button name="descargar_factura_pdf" attrs="{'invisible': [('move_timbrada','=','Sin Timbrar')]}" type="object" string="Descargar Factura PDF" icon="fa-file-pdf-o" />
                <button name="descargar_factura_xml" attrs="{'invisible': [('move_timbrada','=','Sin Timbrar')]}" type="object" string="Descargar Archivo XML" icon="fa-file-text" />
-               <button name="cancelar_pagos_timbrada" string="Cancelar Timbre del Pago" icon="fa-times" type="object" attrs="{'invisible': [('move_timbrada','=','Sin Timbrar')]}" />
+               <button name="cancelar_pagos_timbrada" string="Cancelar Timbre del Pago" icon="fa-times" type="object" attrs="{'invisible': [('move_timbrada','!=','Timbrada')]}" />
             </xpath>
          </field>
-      </record>
+      </record>-->
+
+
+
+
+
       <record id="account_payment_sft_pago_view" model="ir.ui.view">
          <field name="name">account.payment.form</field>
          <field name="model">account.payment</field>
          <field name="inherit_id" ref="account.view_account_payment_form" />
          <field name="arch" type="xml">
-            <xpath expr="//field[@name='journal_id']" position="after">
-               <field name="no_operacion" />
-               <field name="rfc_emisor_cta_ord" />
+            <xpath expr="//field[@name='communication']" position="after">
+               <!--  'readonly':[('puede_editar','=',False)],   -->
+               <field name="formadepagop_id" attrs="{'invisible':[('timbrar_pago', '=', False)], 'readonly':[('puede_editar','=',False)]}" />
+               <field name="tipocambiop" attrs="{'invisible':[('timbrar_pago', '=', False)], 'readonly':[('puede_editar','=',False)]}" />
+               <field name="moneda_p" attrs="{'invisible':[('timbrar_pago', '=', False)], 'readonly':[('puede_editar','=',False)]}"  />
+               <field name="no_operacion" attrs="{'invisible':[('timbrar_pago', '=', False)], 'readonly':[('puede_editar','=',False)]}" />
+               <field name="no_parcialidad" attrs="{'invisible':[('timbrar_pago', '=', False)], 'readonly':[('puede_editar','=',False)]}"  />
+               <field name="imp_saldo_ant" attrs="{'invisible':[('timbrar_pago', '=', False)], 'readonly':[('puede_editar','=',False)]}" />
+               <field name="puede_editar" invisible="1"/>
+               <field name="imp_pagado" attrs="{'invisible':[('timbrar_pago', '=', False)], 'readonly':[('puede_editar','=',False)]}"  />
+               <field name="imp_saldo_insoluto" attrs="{'invisible':[('timbrar_pago', '=', False)], 'readonly':[('puede_editar','=',False)]}"  />
+
             </xpath>
+
+
+
+            <xpath expr="/form/sheet[1]/group[1]/group[2]" position="after">
+               <group attrs="{'invisible':[('timbrar_pago', '=', False)], 'readonly':[('puede_editar','=',False)]}">
+                  <div colspan="2">
+                     <center>
+                        <span>
+                           <h3 style="display:inline">Mis Datos bancarios</h3>
+                        </span>
+                     </center>
+                  </div>
+                  <field name="rfc_emisor_cta_ben" editable="true" attrs="{'invisible':[('ocultar', '=', True)], 'readonly':[('puede_editar','=',False)]}" />
+                  <field name="cta_beneficiario" attrs="{'invisible':[('ocultar', '=', True)], 'readonly':[('puede_editar','=',False)]}" />
+               </group>
+               <group attrs="{'invisible':[('timbrar_pago', '=', False)], 'readonly':[('puede_editar','=',False)]}">
+                  <div colspan="2">
+                     <center>
+                        <span>
+                           <h3 style="display:inline">Datos bancarios de mi cliente</h3>
+                        </span>
+                     </center>
+                  </div>
+                  <field name="nom_banco_ord_ext_id" attrs="{'invisible':[('ocultar', '=', True)], 'readonly':[('puede_editar','=',False)]}" />
+                  <field name="rfc_emisor_cta_ord" attrs="{'invisible':[('ocultar', '=', True)], 'readonly':[('puede_editar','=',False)]}" />
+                  <field name="cta_ordenante" attrs="{'invisible':[('ocultar', '=', True)], 'readonly':[('puede_editar','=',False)]}" />
+                  <field name="timbrar_pago" invisible="1" />
+               </group>
+            </xpath>
+
+            <xpath expr="//div[@name='amount_div']" position="after">
+               <field name="timbrada" />
+               <field name="uuid" attrs="{'invisible':[('timbrar_pago', '=', False)]}" />
+               <field name="ocultar" invisible="1" />
+               <field name="timbrar_pago" invisible="1" />
+               <field name="ref" invisible="1" />
+               <field name="puede_cancelar" invisible="1"  />
+               <field name="sustituye_pago" attrs="{'invisible':[('timbrar_pago', '=', False)], 'readonly':[('puede_editar','=',False)]}" />
+               <field name="pago_sustituye" domain="['&amp;',('ref', '=', ref),('state', '=', 'canceled')]" attrs="{'invisible':[('sustituye_pago', '=', False)], 'readonly':[('puede_editar','=',False)]}" options="{'no_create': True, 'no_create_edit':True}"  />
+
+            </xpath>
+
+            <xpath expr="/form/header/button" position="after">
+               <button name="Validar_y_Timbrar_Pago" attrs="{'invisible': ['|',('timbrada','!=','Sin Timbrar'),('timbrar_pago','=',False) ]}" type="object" string="Timbrar Pago" class="oe_highlight" />
+               <button name="descargar_factura_pdf" attrs="{'invisible': [('timbrada','!=','Timbrada') ]}" type="object" string="Descargar Factura PDF" icon="fa-file-pdf-o" />
+               <button name="descargar_factura_xml" attrs="{'invisible': [('timbrada','!=','Timbrada') ]}" type="object" string="Descargar Archivo XML" icon="fa-file-text" />
+
+               <button name="cancelar_pagos_timbrada"  attrs="{'invisible': ['|',('timbrada','!=','Timbrada'),('timbrar_pago','=',False) ]}"    string="Cancelar Timbre del Pago" icon="fa-times" type="object" />
+            </xpath>
+
+
+
          </field>
       </record>
+      <record id="payment_cancel_form_inherit_sft" model="ir.ui.view">
+            <field name="name">payment.cancel.form.inherit</field>
+            <field name="model">account.payment</field>
+            <field name="inherit_id" ref="account_cancel.payment_cancel_form_inherit"/>
+            <field name="arch" type="xml">
+                <xpath expr="//header/button[@name='cancel']"  position="attributes">
+                  <attribute name="attrs">{'invisible': [('puede_cancelar', '=',False)]}</attribute>
+               </xpath>
+            </field>
+        </record>
+
+
    </data>
 </odoo>
